--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="icon" href="src/img/logo.svg">
-  <link rel="stylesheet" href="/dist/output.css" />
+  <link rel="stylesheet" href="dist/output.css"/>
 </head>
 
 <body class="dark:bg-gray-900 ">
@@ -68,7 +68,6 @@
             </div> -->
       </div>
   </nav>
-
   <header class="bg-center bg-cover bg-no-repeat bg-gray-700 bg-blend-multiply"
     style="background-image: url('src/img/blurry-gradient-haikei(6).png')">
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
@@ -79,7 +78,6 @@
       <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0"></div>
     </div>
   </header>
-
   <!-- ?section -->
   <section class="px-12 py-14 container text-center">
 
