cambios img tras

--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="relative overflow-hidden max-h-96 w-full">
-        <img
-          class=" z-0 rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(7).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(7).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -173,9 +174,9 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -264,9 +265,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -350,9 +352,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -426,9 +429,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(5).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="" src="src/img/blurry-gradient-haikei(5).png" alt="imgtrans" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -498,9 +502,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(6).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(6).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -571,9 +576,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(1).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(1).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -649,9 +655,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -739,9 +746,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div>
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -824,9 +832,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -912,9 +921,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -994,9 +1004,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div>
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -1081,9 +1092,10 @@
     <section
       class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 my-7 group overflow-hidden">
       <div class="overflow-hidden max-h-96 w-full">
-        <img
-          class="rounded-t-lg  group-hover:transition-all group-hover:scale-x-150 group-hover:delay-150 group-hover:duration-300 group-hover:ease-in-out"
-          src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        <div class="overflow-hidden">
+
+          <img class="imgtrans" src="src/img/blurry-gradient-haikei(2).png" alt="" />
+        </div>
         <section
           class=" bottom-0 left-0 right-0 z-50 flex p-3 mt-3 mx-3 bg-white  border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
           <div class="flex items-center gap-4">
@@ -1108,14 +1120,14 @@
             Estoy soñando despierto Anhelo ver tu sonrisa.
           </p>
           <p>
-            
+
             Quiero tocar tus mejillas
           </p>
           <p>
 
             En cada canción estaré. <br>
             Mi alma a ti te entregué. <br> No tengo ambición alguna, <br>
-             Junto a ti quiero ver la luna. <br>
+            Junto a ti quiero ver la luna. <br>
             En cada oración me refugiare Palabras llenas de amor te daré Y si algún día no me encuentras <br>
             Búscame mientras sueñas.
           </p>
