--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <link rel="stylesheet" href="dist/output.css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2YWMBZK8CN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2YWMBZK8CN');
+</script>
+
 <body class="dark:bg-gray-900 ">
   <!-- !CABECERA -->
 
