--- a/index.html
+++ b/index.html
@@ -16,17 +16,9 @@
   <link rel="stylesheet" href="dist/output.css" />
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2YWMBZK8CN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-2YWMBZK8CN');
-</script>
 
-<body class="dark:bg-gray-900 ">
+<body class="dark:bg-gray-900 bg-white">
   <!-- !CABECERA -->
 
   <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
