--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Crazyrau</title>
+  <title>rau</title>
   <meta name="description" content="Blog personal, con fines recreativos.">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Raul antonio de la cruz hernandez">
@@ -53,8 +53,8 @@
         <label class="theme-toggle" title="Toggle theme">
           <input type="checkbox" id="dark-toggle" name="dark-mode" />
           <span class="theme-toggle-sr">Toggle theme</span>
-          <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="theme-toggle__within dark:fill-white" height="2em"
-            width="2em" viewBox="0 0 32 32" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="theme-toggle__within dark:fill-white"
+            height="2em" width="2em" viewBox="0 0 32 32" fill="currentColor">
             <clipPath id="theme-toggle__within__clip">
               <path d="M0 0h32v32h-32ZM6 16A1 1 0 0026 16 1 1 0 006 16" />
             </clipPath>
@@ -92,10 +92,10 @@
             </div> -->
       </div>
   </nav>
-  <header class="bg-center bg-cover bg-no-repeat bg-gray-700 bg-blend-multiply"
-    style="background-image: url('src/img/blurry-gradient-haikei(6).png')">
+  <header class="bg-center bg-cover bg-no-repeat b" style="background-image: url('src/img/fondo2.svg')">
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
+      <h1
+        class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-blue-800 md:text-5xl lg:text-6xl dark:text-white">
         Blog Personal
       </h1>
       <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"></p>
